--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
            </div>
            <div class="imagem">
                  <img src="Erro.png">
+                 <div class="sombra">
+             
+            </div>
            </div>
+           
 
        </main>
 </body>
